--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
         <!-- OurService -->
         <section id="scrollspyHeading2" class="section-ourservice mt-5">
-            <div class="container">
+            <div class="container ">
                 <div class="row justify-content-center">
                     <div class="col-12">
                         <div class="judul text-center">
@@ -271,7 +271,7 @@
                 </div>
 
                 <div class="row mt-5">
-                    <div class="col-12 col-md-3 mt-1">
+                    <div class="col-12 col-md-3 mt-1 d-flex justify-content-center">
                         <div class="card no-border"
                             style="width: 18rem; box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;">
                             <img src="assets/banner.jpg" class="card-img-top" alt="...">
@@ -290,7 +290,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 mt-1">
+                    <div class="col-12 col-md-3 mt-1 d-flex justify-content-center">
                         <div class="card no-border"
                             style="width: 18rem; box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;">
                             <img src="assets/banner2.jpg" class="card-img-top" alt="...">
@@ -309,7 +309,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 mt-1">
+                    <div class="col-12 col-md-3 mt-1 d-flex justify-content-center">
                         <div class="card no-border"
                             style="width: 18rem; box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;">
                             <img src="assets/banner3.jpg" class="card-img-top" alt="...">
@@ -332,7 +332,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 mt-1">
+                    <div class="col-12 col-md-3 mt-1 d-flex justify-content-center">
                         <div class="card no-border"
                             style="width: 18rem; box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;">
                             <img src="assets/banner.jpg" class="card-img-top" alt="...">
