--- a/index.html
+++ b/index.html
@@ -447,13 +447,13 @@
                     <div class="col-12 col-md-6 col-lg-6">
                         <div class="list-contact">
                             <ul class="list-group border-0">
-                                <a href="mailto:test@gmail.com" class="text-decoration-none">
+                                <a href="mailto:support@adiljayamandiri.com" class="text-decoration-none">
                                     <li class="list-group-item border-0 d-flex">
                                         <div class="icon">
                                             <i class="fas fa-envelope-open-text"></i>
                                         </div>
                                         <span>
-                                            ajmandiri@gmail.com
+                                            support@adiljayamandiri.com
                                         </span>
                                     </li>
                                 </a>
@@ -475,7 +475,7 @@
                                             <i class="fas fa-map-marked-alt"></i>
                                         </div>
                                         <span>
-                                            Graha Harapan B15 N0.13, Mustikajaya - Bekasi 17158
+                                            Graha Harapan B15 No.07, Mustikajaya - Bekasi 17158
                                         </span>
                                     </li>
                                 </a>
@@ -502,7 +502,7 @@
             <div class="row">
                 <div class="col-12">
                     <p class="pt-2 pb-2 text-center">
-                        &copy; 2021 adiljayamakmur.com
+                        &copy; 2021 adiljayamandiri.com
                     </p>
                 </div>
             </div>
