--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                                 <div class="d-grid gap-2">
                                     <button type="button" class="btn btn-success" data-bs-toggle="modal"
                                         data-bs-target="#staticBackdrop">
-                                        Minta penawaran
+                                        butuh penawaran
                                     </button>
 
                                 </div>
@@ -302,7 +302,7 @@
                                 <div class="d-grid gap-2">
                                     <button type="button" class="btn btn-success" data-bs-toggle="modal"
                                         data-bs-target="#staticBackdrop">
-                                        Minta penawaran
+                                        butuh penawaran
                                     </button>
 
                                 </div>
@@ -322,7 +322,7 @@
                                 <div class="d-grid gap-2">
                                     <button type="button" class="btn btn-success" data-bs-toggle="modal"
                                         data-bs-target="#staticBackdrop">
-                                        Minta penawaran
+                                        butuh penawaran
                                     </button>
 
                                 </div>
@@ -346,7 +346,7 @@
                                 <div class="d-grid gap-2">
                                     <button type="button" class="btn btn-success" data-bs-toggle="modal"
                                         data-bs-target="#staticBackdrop">
-                                        Minta penawaran
+                                        butuh penawaran
                                     </button>
 
                                 </div>
