--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     Utama</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#scrollspyHeading1">Tentang</a>
+                                <a class="nav-link" href="tentangkami.html">Tentang</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#scrollspyHeading3">Galleri</a>
@@ -151,57 +151,6 @@
         </section>
 
 
-        <!-- About US -->
-        <section id="scrollspyHeading1" class="section-aboutus mt-5">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <div class="judul text-center">
-                            <h3>Tentang Kami</h3>
-                            <div class="row justify-content-center">
-                                <div class="border rounded-pill garis" style=" height: 5px; width: 100px;">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row mt-3">
-                    <div class="col-12 col-md-6 col-lg-6" data-aos="flip-right" data-aos-duration="3000">
-                        <div class="thumbnail-aboutus text-center">
-                            <img src="assets/aboutus1.jpg" class="img-fluid" alt="">
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-md-5 col-lg-5 mt-3 pt-5" data-aos="flip-left" data-aos-duration="4000">
-                        <div class="profil">
-                            <div class="title-profil text-center pt-3">
-                                <h5>CV. ADIL JAYA MANDIRI</h5>
-                            </div>
-                            <div class="detail-profil text-center pt-2 px-3">
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum maxime aliquam
-                                    nesciunt, dolorum odio alias libero atque blanditiis doloribus tempore nobis quas
-                                    incidunt? Laudantium labore dicta, eum voluptatum iste aut?
-
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil exercitationem ea
-                                    sequi animi repellendus magnam voluptas repellat dolores voluptate, veritatis
-                                    asperiores adipisci quae blanditiis, id ullam explicabo nostrum natus nisi.
-
-                                </p>
-                            </div>
-
-                            <div class="selengkapnya text-center">
-                                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                    <p class="fst-italic text-underline" style="color: whitesmoke;"><u>SELENGKAPNYA</u>
-                                    </p>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -261,11 +210,11 @@
                 <div class="row justify-content-center">
                     <div class="col-12">
                         <div class="judul text-center">
-                            <h3>Galleri</h3>
+                            <!-- <h3>Galleri</h3>
                             <div class="row justify-content-center">
                                 <div class="border rounded-pill garis" style=" height: 5px; width: 100px;">
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
