--- a/tentangkami.html
+++ b/tentangkami.html
@@ -92,11 +92,11 @@
                 <div class="row justify-content-center">
                     <div class="col-12">
                         <div class="judul text-center">
-                            <h3>Tentang Kami</h3>
+                            <!-- <h3>Tentang Kami</h3>
                             <div class="row justify-content-center">
                                 <div class="border rounded-pill garis" style=" height: 5px; width: 100px;">
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
         <i class="fab fa-whatsapp my-float"></i>
     </a>
 
-    <footer style="margin-top: 110px !important;">
+    <footer style="margin-top: 150px !important;">
         <hr style="background-color: #317AB8; height: 2px; border: 0;
        ">
         <div class="container">
