--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
     <script>
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
-                pageLanguage: 'ind',
+                includedLanguages: 'id,nl,en,es,it,fr',
                 autoDisplay: 'true',
                 layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
             }, 'google_translate_element');
