--- a/index.html
+++ b/index.html
@@ -121,27 +121,26 @@
                                     <img src="assets/banner.jpg" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5 style="color:black;">Produk 1</h5>
-                                        <a href="/detail.html" class="btn btn-primary">Detail</a>
+                                        <p style="color:black;">Merupakan Produk Baru yang bisa kalian beli</p>
+
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <img src="assets/banner2.jpg" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5 style="color:black;">Produk 2</h5>
-                                        <a href="/detail.html" class="btn btn-primary">Detail</a>
+                                        <p style="color:black;">Merupakan Produk Baru yang bisa kalian beli</p>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <img src="assets/banner3.jpg" class="d-block w-100" alt="...">
                                     <div class="carousel-caption  d-none d-md-block">
                                         <h5 style="color:black;">Produk 3</h5>
-                                        <a href="/detail.html" class="btn btn-primary">Detail</a>
+                                        <p style="color:black;">Merupakan Produk Baru yang bisa kalian beli</p>
                                     </div>
                                 </div>
 
                             </div>
-
-
 
                             <button class="carousel-control-prev" type="button"
                                 data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -489,7 +488,7 @@
     <script>
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
-                includedLanguages: 'id,nl,en,es,it,fr',
+                includedLanguages: 'id,zh,en,es,it,fr',
                 autoDisplay: 'true',
                 layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
             }, 'google_translate_element');
